# soteriareitti

./: .coveragerc  .env  .gitignore  .pylintrc  README.md  README_FI.md  pyproject.toml  tasks.py  testing.py
.github/workflows/: pylint.yml
docs/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  tunnit.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_5.md
docs/coverage/: d_230908a560b6e5d1_file_reader_py.html  d_230908a560b6e5d1_geo_py.html  d_230908a560b6e5d1_graph_py.html  d_230908a560b6e5d1_logging_py.html  d_230908a560b6e5d1_overpass_py.html  d_230908a560b6e5d1_settings_py.html  d_230908a560b6e5d1_simulation_py.html  d_288b7c2cef21087b_dijkstra_py.html  d_288b7c2cef21087b_ida_star_py.html  d_61722a1de3c3b3f3_geo_py.html  d_61722a1de3c3b3f3_graph_py.html  d_c54ff564f5914083__overpass_py.html  d_c54ff564f5914083_app_py.html  index.html  (+27 more)
htmlcov/: d_e1e46e64431a7d54_main_py.html  d_ef07601264e03f2d_logging_config_py.html  d_ef07601264e03f2d_settings_py.html  d_ef07601264e03f2d_utils_geo_py.html  d_ef07601264e03f2d_utils_graph_py.html  d_ef07601264e03f2d_utils_overpass_py.html  d_f271482df14a291e__overpass_py.html  d_f271482df14a291e_app_py.html  d_f271482df14a291e_map_py.html  index.html  status.json
soteriareitti/: __init__.py  main.py
tests/: benchmark_excel.py  benchmark_test.py  helpers.py  test_app.py  test_dijkstra.py  test_emergency.py  test_geo.py  test_graph.py  test_ida_star.py  test_map.py  test_map_point.py  test_responder.py  test_simulation.py  test_station.py  test_utils_geo.py  test_utils_graph.py
(+43 files in other folders)
