[tool.poetry]
name = "soteriareitti"
version = "0.1.0"
description = ""
authors = ["3nd3r1 <ender.spam.guru@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^3.1"
overpy = "^0.6"
invoke = "^2.2.0"
tkintermapview = "^1.29"
geopy = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 100

